--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^5.0.0
   dio: ^5.7.0
   flutter_bloc: ^8.1.6
+  get_it: ^8.0.0
 
 dev_dependencies:
   flutter_test:
